# utils

./: .gitignore  README.md  pyproject.toml
dataverse_utils/: config-example.py  create-graph.py  create_dataverse.py  delete-specific-dataset.py  empty-given-dataverse.py  example.config.py  export-metadata.py  extract-dataverse-ids.py  extract_dataverse_ids.py  publish_dataverse.py  requirements.txt  update_dataset.py  utils.py
dataverse_utils/Licenses/: delete-license.py  import-licenses.py
dataverse_utils/Licenses/CBS Licenses/: CBS-licence.json
dataverse_utils/Licenses/DANS Licenses/: DANS-MA-CE.json  DANS-MA-KA.json  DANS-MA-KI.json
dataverse_utils/Licenses/LISS Licenses/: LISS-licence.json
dataverse_utils/Licenses/Licenses/: Apache-2.0.json  BSD-2-Clause.json  BSD-3-Clause.json  CERN-OHL-1.1.json  CERN-OHL-1.2.json  DANS-License.json  GLP-3.0.json  GPL-2.0.json  LGPL-3.0.json  License-ceCILL-V2-en.json  License-ceCILL-b-V1-en.json  LicenseCC-BY-NC-3.0.json  LicenseCC-BY-NC-SA-3.0.json  MIT.json  MPL-2.0.json  TAPR-OHL-1.0.json  licenseCC-BY-4.0.json  licenseCC-BY-NC-4.0.json  licenseCC-BY-NC-ND-4.0.json  licenseCC-BY-NC-SA-4.0.json  licenseCC-BY-ND-4.0.json  licenseCC-BY-SA-4.0.json  licenseCC0-1.0.json
dataverse_utils/dataverses/: cbs.json  cid.json  dans.json  dataversenl.json  hsn.json  liss.json
dataverse_utils/dataverses/dataversenl_subverses/: avans.json  delft.json  fontys.json  groningen.json  hanze.json  hr.json  leiden.json  maastricht.json  tilburg.json  umcu.json  (+4 more)
minio_utils/: minio_upload.py
oai_pmh_utils/: pmh_count.py  pmh_lastest.py
