[tool.poetry]
name = "utils"
version = "0.1.0"
description = "Utils for ODISSEI."
authors = ["Fjodor van Rijsselberg"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
